--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -4,7 +4,7 @@ fixtures:
 
 # profile module layout, default include ntp module
     ntp: "https://github.com/puppetlabs/puppetlabs-ntp.git"
-    nfs: "https://github.com/echocat/puppet-nfs.git"
+    nfs: "https://github.com/derdanne/puppet-nfs.git"
     concat: "git://github.com/puppetlabs/puppetlabs-concat.git"
 
   symlinks:
